@@ -231,6 +231,7 @@ S3method(variable.names, lm)
 S3method(vcov, glm)
 S3method(vcov, gls)
 S3method(vcov, lm)
+S3method(vcov, mlm)
 S3method(vcov, lme)
 S3method(weights, default)
 S3method(weights, glm)
