@@ -12,6 +12,13 @@ vcov.lm <- function(object, ...)
     so$sigma^2 * so$cov.unscaled
 }
 
+vcov.mlm <- function(object, ...)
+{
+    so <- summary(object, corr=FALSE)[[1]]
+    kronecker(estVar(object), so$cov.unscaled,
+        make.dimnames=TRUE)
+}
+
 vcov.gls <- function (object, ...) object$varBeta
 
 vcov.lme <- function (object, ...) object$varFix
